--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,7 @@
     <artifactId>spark-to-words</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+    </dependencies>
     
 </project>
